@@ -4,6 +4,7 @@
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#FF0000" alink="#FF00FF">
 <h1 align="center">Tux Paint "Magic" Tool: List of Magic Tools</h1>
+<li><a href="blinds.html">Blinds</a></li>
 <li><a href="blocks.html">Blocks</a></li>
 <li><a href="blur.html">Blur</a></li>
 <li><a href="bricks.html">Bricks</a></li>
@@ -31,6 +32,10 @@
 <li><a href="lighten.html">Lighten</a></li>
 <li><a href="metalpaint.html">Metal Paint</a></li>
 <li><a href="mirror.html">Mirror</a></li>
+<li><a href="mosaic.html">Mosaic</a></li>
+<li><a href="hexagonmosaic.html">Hexagon Mosaic</a></li>
+<li><a href="irregularmosaic.html">Irregular Mosaic</a></li>
+<li><a href="squaremosaic.html">Square Mosaic</a></li>
 <li><a href="negative.html">Negative</a></li>
 <li><a href="noise.html">Noise</a></li>
 <li><a href="perspective.html">Perspective</a></li>
@@ -39,6 +44,7 @@
 <li><a href="rain.html">Rain</a></li>
 <li><a href="rainbow.html">Rainbow</a></li>
 <li><a href="realrainbow.html">Real Rainbow</a></li>
+<li><a href="roygbivrainbow.html">ROYGBIV Rainbow</a></li>
 <li><a href="ripples.html">Ripples</a></li>
 <li><a href="rosette.html">Rosette</a></li>
 <li><a href="sharpen.html">Sharpen</a></li>
