@@ -1,5 +1,6 @@
                   Tux Paint "Magic" Tool: List of Magic Tools
 
+   * Blinds
    * Blocks
    * Blur
    * Bricks
@@ -27,6 +28,10 @@
    * Lighten
    * Metal Paint
    * Mirror
+   * Mosaic
+   * Hexagon Mosaic
+   * Irregular Mosaic
+   * Square Mosaic
    * Negative
    * Noise
    * Perspective
@@ -35,6 +40,7 @@
    * Rain
    * Rainbow
    * Real Rainbow
+   * ROYGBIV Rainbow
    * Ripples
    * Rosette
    * Sharpen
